FIX padding on mobile

--- a/docs-src/src/css/custom.css
+++ b/docs-src/src/css/custom.css
@@ -111,6 +111,12 @@ pre code {
 .container .col article {
     padding: 1rem 1rem 1rem 2rem;
 }
+@media (max-width: 500px) {
+    .container .col article {
+        padding: 0;
+    }
+}
+
 
 /* Breakpoint for mobile */
 @media (max-width: 500px) {
